--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,8 @@
+Version 0.9.4 February 22, 2015
+
+- complete for clean compilation (with oti.magicdraw); however, some derivations are incompletely defined
+  (search for "= ???" in *Ops.scala)
+ 
 Version 0.9.3: February 22, 2015
 
 - Use the Acceleo-generated classes for all of UML.
