--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,7 @@
+Version 0.10.0 March 4, 2015
+
+Full code generation.
+
 Version 0.9.7 February 27, 2015
 
 - new query: UMLNamespace.allNamespacesWithinScope(): Set[UMLNamespace]
