--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,7 @@
+Version 0.10.2 March 4, 2015
+
+Comment out System.out.println statements in UMLPropertyOps.isLogicallyNavigable
+
 Version 0.10.1 March 4, 2015
 
 - new query: getGeneralStereotypes(UMLStereotype)
