--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,10 @@
+Version 0.10.5 March 25, 2015
+
+reference properties should not include opposites of composite properties
+Fix cases where the wrong subsetted property was chosen as a value in the tool neutral API
+Non derived composite properties that subset other non derived composite properties are serialized in XMI as attributes rather than nested elements.
+SysML 1.4
+
 Version 0.10.3 March 22, 2015
 
 SysML 1.4
