--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,7 @@
+Version 0.10.6 March 28, 2015
+
+Updated ID generator (see the SVN history for changes)
+
 Version 0.10.5 March 25, 2015
 
 reference properties should not include opposites of composite properties
