--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,7 @@
+Version 0.10.7 March 30, 2015
+
+Package.URI is serialized using Package.getEffectiveURI
+
 Version 0.10.6 March 28, 2015
 
 Updated ID generator (see the SVN history for changes)
