Adding a feature for checking the generated ID
git-svn-id: https://www.omgwiki.org/repos/TIWG/Eclipse%20Scala%20Projects/org.omg.oti@699 b05f3425-8805-43f2-8a1d-5852a8693556

--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,7 @@
+Version 0.10.9 April 03, 2015
+Adds a checkID(): Boolean operation to the IDGenerator class to check unicity of generated IDs and point out failures in ID computation if any registered.
+Adds a toWrappedObjectString : String operation to the UMLElementOps trait, defined with "???". Required to be implemented if checkID is used.
+
 Version 0.10.8 March 31, 2015
 
 Fixed the logic for serializing composite properties: 
