--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,3 +1,8 @@
+Version 0.10.17 April 27, 2015 
+Minor adjustments:
+DocumentSet.scala -> fixes exception in case of unresolved (and not ignored) elements
+IDGenerator -> adds a generic method to list all computed IDs to the console
+
 Version 0.10.16 April 22, 2015
 Fixes issues:
 TIWG-5: closing tag indentation
